--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.sourcePaths": [
-        "Atividade 2",
-        "Atividade 1"
+        "Atividade 1/atividade_1",
+        "Atividade 2/atividade_2",
+        "Atividade 3/atividade_3"
     ]
 }
