--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "java.project.sourcePaths": [
+        "Atividade 3",
         "Atividade 2",
         "Atividade 1",
-        "Atividade 3"
+        "Atividade 4"
     ]
 }
