--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "java.project.sourcePaths": [
+        "Atividade 7",
         "Atividade 6",
         "Atividade 5",
         "Atividade 4",
