--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "java.project.sourcePaths": [
+        "Atividade 9",
         "Atividade 8",
         "Atividade 7",
         "Atividade 6",
