--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "Atividade 2",
         "Atividade 10",
         "Atividade 11",
+        "Atividade 12",
         "Atividade 1",
     ]
 }
