--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,10 @@
         "Atividade 10",
         "Atividade 11",
         "Atividade 12",
+        "Atividade 13",
+        "Atividade 14",
+        "Atividade 15",
+        "Atividade 16",
         "Atividade 1",
     ]
 }
