--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "Atividade 4",
         "Atividade 3",
         "Atividade 2",
+        "Atividade 17",
         "Atividade 16",
         "Atividade 15",
         "Atividade 14",
